# timebox

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Vagrantfile  build.sh  snyk_result.json
.cmake/: CMakeLists_imgui.txt  EnablePGO.cmake  ExternalContent.cmake  FindLibSerial.cmake  GitVars.cmake  Utilities.cmake  external_content.cmake  imgui.cmake
.devcontainer/: Dockerfile  devcontainer.json
.trunk/: trunk.yaml
app/: CMakeLists.txt  config.hpp.in
app/benchmark/: CMakeLists.txt
app/benchmark/include/: CMakeLists.txt  utilities.hpp
app/benchmark/include/linux/: CMakeLists.txt
app/benchmark/include/win32/: CMakeLists.txt
app/benchmark/src/: CMakeLists.txt  benchmark.cpp
app/benchmark/src/linux/: CMakeLists.txt  benchmark.cpp
app/benchmark/src/win32/: CMakeLists.txt
app/include/: CMakeLists.txt  appcontext.hpp  application.hpp  config.hpp  gui_backend.hpp  gui_frontend.hpp  timebox.hpp  timebox_common.hpp
app/include/win32/: gui_backend.hpp  timebox.hpp
app/lib/: CMakeLists.txt  config.hpp.in
app/lib/include/: CMakeLists.txt  base_clockcontroller.hpp  base_service.hpp  base_servicemanager.hpp  baseclockcontroller.hpp  clockcontroller.hpp  common.hpp  config.hpp  exceptions.hpp  linclockcontroller.hpp  linserialreader.hpp  pid.hpp  serialinterface.hpp  serialreader.hpp  singleton.hpp  threadwrapper.hpp  utilities.hpp  utilities_common.hpp  utils.hpp  winclockconroller.hpp  winclockcontroller.hpp  winserialreader.hpp
app/lib/include/linux/: CMakeLists.txt  clockcontroller.hpp  linclockcontroller.hpp  utilities.hpp
app/lib/include/win32/: CMakeLists.txt  clockcontroller.hpp  utilities.hpp  winclockcontroller.hpp  winserialreader.hpp
app/lib/src/: CMakeLists.txt  base_clockcontroller.cpp  base_service.cpp  base_servicemanager.cpp  clockcontroller.cpp  common.cpp  linclockcontroller.cpp  serialinterface.cpp  serialreader.cpp  threadwrapper.cpp  utilities.cpp  utilities_common.cpp  utils.cpp  winclockconroller.cpp  winclockcontroller.cpp  winserialreader.cpp
app/lib/src/linux/: CMakeLists.txt  clockcontroller.cpp  linserialreader.cpp  utilities.cpp
app/lib/src/win32/: CMakeLists.txt  clockcontroller.cpp  serialinterface.cpp  utilities.cpp  winclockcontroller.cpp  winserialreader.cpp
app/proto/: CMakeLists.txt
app/proto/00_experiment/: CMakeLists.txt
app/proto/00_experiment/src/: main.cpp
app/proto/01_imgui/: CMakeLists.txt
app/proto/01_imgui/src/: main.cpp
app/proto/02_regex/: CMakeLists.txt
app/proto/02_regex/src/: main.cpp
app/proto/03_timefromstr/: CMakeLists.txt
app/proto/03_timefromstr/src/: main.cpp
app/proto/include/: CMakeLists.txt  defines.hpp  defines_common.hpp
app/proto/include/linux/: CMakeLists.txt  defines.hpp
app/proto/include/win32/: defines.hpp
app/proto/linux/: CMakeLists.txt  proto_adjtimex.cpp  proto_boostprocess.cpp
app/proto/src/: CMakeLists.txt  proto_adjtimex.cpp  proto_boostprocess.cpp  proto_libserial.cpp  proto_regex.cpp  proto_temporarytest.cpp  proto_timeformstr.cpp  proto_winclockcontrol.cpp
app/proto/src/linux/: CMakeLists.txt
app/proto/src/win32/: proto_boostprocess.cpp  proto_clockcontrol.cpp  proto_winclockcontrol.cpp  proto_winmain.cpp
app/proto/win32/: CMakeLists.txt
app/proto/win32/W00_boostprocess/: CMakeLists.txt
app/proto/win32/W00_boostprocess/src/: main.cpp
app/proto/win32/W01_clockcontrol/: CMakeLists.txt
app/proto/win32/W01_clockcontrol/src/: main.cpp
app/proto/win32/W02_winmain/: CMakeLists.txt
app/proto/win32/W02_winmain/src/: CMakeLists.txt  main.cpp
app/proto/win32/W03_imgui_dx11/: CMakeLists.txt
app/proto/win32/W03_imgui_dx11/src/: main.cpp
app/src/: CMakeLists.txt  application.cpp  gui_frontend.cpp  main.cpp  timebox.cpp  timebox_common.cpp
app/src/linux/: main.cpp
app/src/win32/: CMakeLists.txt  appcontext.cpp  gui_backend.cpp  main.cpp  timebox.cpp
app/test/: CMakeLists.txt
app/test/include/: CMakeLists.txt  commonfakes.hpp  defines.hpp  fakes.hpp  mock_common.hpp  mockcommon.hpp
app/test/include/linux/: fakes.hpp  mock.hpp
app/test/include/win32/: mock.hpp
app/test/src/: CMakeLists.txt  commonfakes.cpp  fakes.cpp  mock_common.cpp  mockcommon.cpp  test_clockcontroller.cpp  test_combined.cpp  test_common.cpp  test_pid.cpp  test_serialreader.cpp  test_utilities.cpp  test_utilities_common.cpp  test_utils.cpp
app/test/src/linux/: mock.cpp  test_clockcontroller.cpp  test_combined.cpp  test_serialreader.cpp  test_utilities.cpp
app/test/src/test/: test_clockcontroller.cpp  test_combined.cpp  test_serialreader.cpp  test_utilities.cpp
app/test/src/win32/: CMakeLists.txt  mock.cpp  test_clockcontroller.cpp  test_combined.cpp  test_serialinterface.cpp  test_serialreader.cpp  test_utilities.cpp
benchmark/: CMakeLists.txt
docs/: Doxyfile  arduino_code.cpp  devlog.md  license_note.txt  naming_convention.md  style_guide.md
proto/: CMakeLists.txt  adjtimex_proto.cpp  defines.hpp
proto/src/: proto_adjtimex.cpp  proto_arduinoread.cpp  proto_experiment.cpp  proto_imgui.cpp  proto_libserial.cpp  proto_systemd.cpp  proto_timeformstr.cpp
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  exceptions.hpp  utils.cpp  utils.hpp
src/lib/classes/: clockcontroller.cpp  clockcontroller.hpp  example_class.cpp  example_class.hpp  pid.hpp  pid.ipp  serialcontroller.cpp  serialcontroller.hpp  serialinterface.cpp  serialinterface.hpp  serialreader.cpp  serialreader.hpp  threadrunner.cpp  threadrunner.hpp  threadwrapper.cpp  threadwrapper.hpp
src/lib/classes/include/: pid.hpp  serialreader.hpp
src/lib/include/: exceptions.hpp  utils.hpp
submodules/: CMakeLists.txt
test/: CMakeLists.txt  defines.hpp
test/src/: test.cpp  test_combined.cpp  test_pid.cpp  test_serialcontroller.cpp  test_serialinterface.cpp  test_serialreader.cpp  test_utils.cpp
tools/: baud_rates_poll.sh  clean_build.sh  cpp_class.py  plot_tick_history.py  select_kit.sh  versionHash.py  version_hash.py
tools/clock_res_check/: clockres_a.c
utils/: cpp_class.py
vagrant/: Vagrantfile  compile_boost.ps1  linux_provision.sh  windows_provision.ps1
(+12 files in other folders)
