file(GLOB SRCS CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB HDRS CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
target_sources(lib${PROJECT_NAME} PUBLIC ${SRCS} ${HDRS})

if(TARGET_PLATFORM MATCHES "LINUX")
  add_subdirectory(linux)
elseif(TARGET_PLATFORM MATCHES "WIN32")
  add_subdirectory(win32)
endif()
